--- a/Group Project 106.2/MainWindow.xaml
+++ b/Group Project 106.2/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Group_Project_106._2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="400">
+        Title="MainWindow" Height="816" Width="416">
     <Grid>
 
         <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Debug Screen" VerticalAlignment="Top" Width="236" TextAlignment="Center" FontSize="16" FontWeight="Bold" FontFamily="AniMe Matrix - MB_EN" Height="19"/>
@@ -24,7 +24,7 @@
 
         <Button Click="Page5Btn" VerticalAlignment="Top" Margin="65,201,215,0" Height="20">Page 5</Button>
 
-        <ContentControl Name="MainContent" />
+        <ContentControl Name="MainContent" Height="800" Width="400" />
 
 
     </Grid>
