--- a/Group Project 106.2/MainWindow.xaml
+++ b/Group Project 106.2/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Group_Project_106._2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="816" Width="416">
+        Title="Covid 19" Height="816" Width="416">
     <Grid>
 
         <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Debug Screen" VerticalAlignment="Top" Width="236" TextAlignment="Center" FontSize="16" FontWeight="Bold" FontFamily="AniMe Matrix - MB_EN" Height="19"/>
@@ -25,7 +25,10 @@
         <Button Click="HomeBtn" VerticalAlignment="Top" Margin="215,201,65,0" Height="20">Home</Button>
 
         <Button Click="adminBtn" VerticalAlignment="Top" Margin="65,236,215,0" Height="20">Admin</Button>
-        
+
+        <Button Click="user_vacBtn" VerticalAlignment="Top" Margin="215,236,65,0" Height="20">User Vac</Button>
+
+
         <ContentControl Name="MainContent" Height="800" Width="400" />
 
     </Grid>
