--- a/Group Project 106.2/MainWindow.xaml
+++ b/Group Project 106.2/MainWindow.xaml
@@ -5,31 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Group_Project_106._2"
         mc:Ignorable="d"
-        Title="Covid 19" Height="816" Width="416">
+        Title="MainWindow" Height="800" Width="400">
     <Grid>
 
-        <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Debug Screen" VerticalAlignment="Top" Width="236" TextAlignment="Center" FontSize="16" FontWeight="Bold" FontFamily="AniMe Matrix - MB_EN" Height="19"/>
-        <TextBlock Name="userState" HorizontalAlignment="Center" Margin="0,35,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="164" Height="16"/>
+        <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Debug Screen" VerticalAlignment="Top" Width="236" TextAlignment="Center" FontSize="16" FontWeight="Bold" FontFamily="AniMe Matrix - MB_EN"/>
+        <TextBlock Name="userState" HorizontalAlignment="Center" Margin="0,35,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="163"/>
 
-        <Button Content="Logout" Name="logoutBtn" HorizontalAlignment="Left" Margin="118,56,0,0" VerticalAlignment="Top" Click="LogoutBtn" Width="62" Height="20"/>
+        <Button Content="Logout" Name="logoutBtn" HorizontalAlignment="Left" Margin="122,56,0,0" VerticalAlignment="Top" Click="LogoutBtn" Width="62"/>
 
+        <Button Click="Page1Btn" VerticalAlignment="Top" Margin="0,100,150,0" Height="20"  Width="120">Page 1</Button>
+        <Button Click="Page2Btn" VerticalAlignment="Top" Margin="150,100,0,0" Height="20"  Width="120">Page 2</Button>
 
+        <Button Click="Page3Btn" VerticalAlignment="Top" Margin="0,150,150,0" Height="20" Width="120">Page 3</Button>
+        <Button Click="Page4Btn" VerticalAlignment="Top" Margin="150,150,0,0" Height="20" Width="120">Page 4</Button>
 
-        <Button Click="Page1Btn" VerticalAlignment="Top" Margin="65,100,215,0" Height="20">Page 1</Button>
-        <Button Click="Page2Btn" VerticalAlignment="Top" Margin="215,100,65,0" Height="20">Page 2</Button>
-
-        <Button Click="Page3Btn" VerticalAlignment="Top" Margin="65,150,215,0" Height="20">Page 3</Button>
-        <Button Click="Page4Btn" VerticalAlignment="Top" Margin="215,150,65,0" Height="20">Page 4</Button>
-
-        <Button Click="Page5Btn" VerticalAlignment="Top" Margin="65,201,215,0" Height="20">Page 5</Button>
-        <Button Click="HomeBtn" VerticalAlignment="Top" Margin="215,201,65,0" Height="20">Home</Button>
-
-        <Button Click="adminBtn" VerticalAlignment="Top" Margin="65,236,215,0" Height="20">Admin</Button>
-
-        <Button Click="user_vacBtn" VerticalAlignment="Top" Margin="215,236,65,0" Height="20">User Vac</Button>
+        <Button Click="Page5Btn" VerticalAlignment="Top" Margin="0,200,150,0" Height="20" Width="120">Page 5</Button>
 
 
-        <ContentControl Name="MainContent" Height="800" Width="400" />
+        <ContentControl Name="MainContent" Height="800" ></ContentControl>
 
     </Grid>
 
